# stm32l4-bare-metal

./: .clangd  .gitattributes  .gitmodules  CMakeLists.txt  LICENSE  STM32L475VGTx_FLASH.ld
.devcontainer/: Dockerfile  devcontainer.json
cmake/: arm-gnu-toolchain.cmake
src/: main.c
